sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  for (i<- 0 to getValueCount()-2){
    if (isSmaller(i+1, i)){
      swap(i+1, i);
      i-=1
      }
    }
  }
}